Publish CC release 11 April

--- a/calico-cloud_versioned_docs/version-3.16/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/release-notes/index.mdx
@@ -4,6 +4,48 @@ description: What's new, and why features provide value for upgrading.
 
 # Release notes
 
+## April 11, 2023
+
+### Updates to Managed Clusters
+
+The **Managed Clusters** page has been redesigned to make it easier and more intuitive to search and filter your clusters.
+
+### Egress gateways for AKS and Azure
+
+{{prodname}} adds egress gateway support for Microsoft Azure and AKS. Egress gateways allow you to identify the namespaces associated with egress traffic outside of your cluster. [Egress gateways for AKS and Azure](../networking/egress/egress-gateway-azure).
+
+### UI for workload-based Web Application Firewall (WAF)
+
+{{prodname}} includes a new UI to enable and configure a workload-based Web Application Firewall. For more information, see [Workload-based web application firewall](../threat/web-application-firewall.mdx#enable-waf).
+
+### Service Graph performance optimizations
+
+{{prodname}} added several optimizations to improve the performance of Service Graph for clusters with larger numbers of namespaces.
+
+### Improvements to Envoy to accommodate advanced ingress controllers
+
+{{prodname}} improves its Envoy deployment so you can use this feature in clusters with ingress controllers that perform advanced load balancing. For more information, see [Workload-based web application firewall](../threat/web-application-firewall.mdx).
+
+### Improved {{prodname}} component security
+
+{{prodname}} components were updated with more restrictive access for pods and containers using the Kubernetes security context:
+- Non-root context whenever possible
+- Root context and privilege escalation are used only when necessary
+- Added `drop ALL capabilities` for pod security
+- Enabled `RuntimeDefault` as the default seccomp profile for all workloads
+
+## February 28, 2023
+
+### Updates
+
+- Adds Bottlerocket support for Container Threat Detection.
+- Adds support for scanning multiple images with Image Assurance
+
+### Bug fixes
+
+- Fixes "Kibana" menu item rename to "Logs".
+- Bug fixes for Container Threat Detection alerts.
+
 ## February 7, 2023
 
 ### New and improved Dashboards
@@ -61,7 +103,7 @@ All users can view the status and health of the Calico Cloud service on our new 
 
 CLI Version v1.1.2.
 
-New CLI will now check that it is compatible with the the latest Image Assurance API.
+New CLI will now check that it is compatible with the latest Image Assurance API.
 
 ### Container Threat Detection
 
@@ -122,7 +164,7 @@ Calico Cloud uses eBPF-based monitoring to log file hashes of programs running i
 If there's a match to known malware from our threat intelligence library, you receive an alert.
 You can view your alerts on the _Alerts_ page on Manager UI.
 
-To get started see, [Malware Detection](../threat/container-threat-detection.mdx))
+To get started see, [Malware Detection](../threat/container-threat-detection.mdx)
 
 ## July 27, 2022
 
@@ -170,7 +212,7 @@ Account owners can click the new "Usage Metrics" button at the bottom of the lef
 
 Installation works on clusters with Calico deployed by AKS.
 
-## Aprril 26, 2022
+## April 26, 2022
 
 ### New feature: Malware detection
 
