--- a/calico-cloud/networking/ipam/get-started-ip-addresses.mdx
+++ b/calico-cloud/networking/ipam/get-started-ip-addresses.mdx
@@ -66,11 +66,13 @@ The host-local IPAM plugin is primarily used by other methods of routing pod tra
 
 ### Install {{prodname}} with calico-ipam
 
-Follow one of the [getting started guides](/getting-started/index) to install {{prodname}}.
+Follow one of the getting started guides to install {{prodname}}.
+<!-- TODO-XREFS-CC -->
 
 ### Install {{prodname}} with host-local IPAM
 
-Follow one of the [getting started guides](/getting-started/index) to install {{prodname}} with flannel networking, or on GKE.
+Follow one of the getting started guides to install {{prodname}}.
+<!-- TODO-XREFS-CC -->
 
 Or, see the [reference documentation on host-local IPAM](../../reference/component-resources/configuration.mdx#using-host-local-ipam).
 
