Remove CRI requirement section (CRI has been around since K8s 1.5)

--- a/calico-cloud/image-assurance/configuring-the-runtime-view.mdx
+++ b/calico-cloud/image-assurance/configuring-the-runtime-view.mdx
@@ -6,11 +6,12 @@ description: Use the Runtime View to find vulnerabilities in your cluster.
 
 ## Big picture
 
-View pods running vulnerability images for all your Managed Clusters.
+View vulnerable images running your Managed Clusters.
 
 ## Value
 
-Runtime View collects image information from all the pods running in all of your connected Managed Clusters. This information is linked to uploaded image scan results so you can see if you clusters are running vulnerable images.
+Runtime View collects image information from the pods running your Managed Clusters. This information
+is linked to uploaded image scan results, allowing you to view the image vulnerabilities in you Managed Clusters.
 
 ## How does the Runtime View collect image information from my Managed Clusters
 
@@ -29,15 +30,7 @@ The "Crawdad" Daemonset requires root privileges and host networking.
 
 **Required**
 
-Ensure that all Managed Clusters connected to your Management Cluster are running a Kubernetes using a CRI for container management.
-
-**Enable Runtime View**
-
-To enable the Runtime View go to the Scan Settings and check the "Enable Runtime View" box. The settings can be
-accessed by clicking the gear on the right side of the page in the Scan Results tab.
-
-By default, this feature is disabled. If you disable the feature after it has been enabled, runtime information that was
-already collected will persist.
+Ensure the path to your CRI socket is configured correctly.
 
 **Configuring the CRI socket path for Managed Cluster**
 
@@ -61,3 +54,11 @@ know the CRI socket path is different from the default:
 3. RKE2 installation use containerd but it's located at `/run/k3s/containerd/containerd.sock`
 
 See [the installation reference](../reference/installation/api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) for more details on the ImageAssurance CR.
+
+**Enable Runtime View**
+
+To enable the Runtime View go to the Scan Settings and check the "Enable Runtime View" box. The settings can be
+accessed by clicking the gear on the right side of the page in the Scan Results tab.
+
+By default, this feature is disabled. If you disable the feature after it has been enabled, runtime information that was
+already collected will persist.
