--- a/calico-cloud/network-policy/beginners/services/services-cluster-ips.mdx
+++ b/calico-cloud/network-policy/beginners/services/services-cluster-ips.mdx
@@ -152,13 +152,15 @@ spec:
     protocol: TCP
     destination:
       selector: k8s-role == 'node'
-      notPorts: ["30000:32767"]  nodePort range
+      notPorts: ["30000:32767"]
+      nodePort range:
   # Allow traffic to the node (not nodePorts, TCP) (not nodePorts, UDP)
   - action: Allow
     protocol: UDP
     destination:
       selector: k8s-role == 'node'
-      notPorts: ["30000:32767"]  nodePort range
+      notPorts: ["30000:32767"]
+      nodePort range:
 ```
 
 #### Step 3: Create a global network policy that selects pods
