--- a/calico-cloud/network-policy/networksets.mdx
+++ b/calico-cloud/network-policy/networksets.mdx
@@ -134,7 +134,7 @@ metadata:
     trusted-ep: "load-balancer"
 spec:
   nets:
- Modify the ip addresses to refer to the ip addresses of load-balancers in your environment
+ # Modify the ip addresses to refer to the ip addresses of load-balancers in your environment
     - 10.0.0.1/32
     - 10.0.0.2/32
 ```
