--- a/calico-cloud/network-policy/policy-firewalls/panorama-integration/tigera-panorama-policy-integration.mdx
+++ b/calico-cloud/network-policy/policy-firewalls/panorama-integration/tigera-panorama-policy-integration.mdx
@@ -358,7 +358,9 @@ The policy will be enforced only until the next polling request to Panorama. The
 - The following annotation appears in the GlobalNetworkSet when an unsupported IP (IP Range or IP wildcard) is mapped to the address group:
 
   ```yaml
-  "firewall.tigera.io/errors": "unsupported-ip-ranges", "unsupported-ip-wildcards"
+  firewall.tigera.io/errors:
+  - unsupported-ip-ranges
+  - unsupported-ip-wildcards
   ```
 
   The logs will display something similar to the following:
