Don't move all runtime view info to new page, just make a page describing how to change the cri socket path

--- a/calico-cloud/image-assurance/scan-image-registries.mdx
+++ b/calico-cloud/image-assurance/scan-image-registries.mdx
@@ -222,7 +222,13 @@ In the Scan Results and Runtime tabs, the **Registry path** field may be blank i
 
 :::
 
-For information configuring the Runtime View please see [Configuring the Runtime View](configuring-the-runtime-view.mdx)
+:::note
+
+If your Managed Clusters are running in RKE or RKE2, running a Kubernetes versions older than 1.23, or are intentionally using a CRI
+implementation different from Containerd, you'll need to ensure that our system knows where the CRI socket on your Managed Cluster
+nodes are. For more information, see [Change the Runtime View CRI socket path](change-the-cri-socket-path.mdx)
+
+:::
 
 **How Pass, Warn, and Fail scores map to CVSS scores**
 
