--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/kubernetes/quickstart.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/kubernetes/quickstart.mdx
@@ -60,7 +60,7 @@ The geeky details of what you get:
 
 1. As a regular user with sudo privileges, open a terminal on the host that you installed kubeadm on.
 
-1. Initialize the master using the following command.
+1. Initialize the control plane using the following command.
 
    ```bash
    sudo kubeadm init --pod-network-cidr=192.168.0.0/16 \
@@ -82,7 +82,7 @@ The geeky details of what you get:
    sudo chown $(id -u):$(id -g) $HOME/.kube/config
    ```
 
-1. Remove master taint in order to allow kubernetes to schedule pods on the master node.
+1. Remove the taint from the control plane to allow Kubernetes to schedule pods on the control plane node.
 
    ```bash
    kubectl taint nodes --all node-role.kubernetes.io/master-
