--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/quickstart.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/quickstart.mdx
@@ -111,7 +111,7 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
    mkdir c:\k
    ```
 
-1. Copy the Kubernetes kubeconfig file from the control-plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
+1. Copy the Kubernetes kubeconfig file from the control plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
 
 1. Copy the {{prodnameWindows}} installation zip file to **c:\tigera-calico-windows.zip**.
 
@@ -202,7 +202,7 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
    mkdir c:\k
    ```
 
-1. Copy the Kubernetes kubeconfig file from the control-plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
+1. Copy the Kubernetes kubeconfig file from the control plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
 
 1. Copy the {{prodnameWindows}} installation zip file to **c:\tigera-calico-windows.zip**.
 
