--- a/calico-enterprise_versioned_docs/version-3.14/visibility/kube-audit.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/visibility/kube-audit.mdx
@@ -98,7 +98,7 @@ On the Kubernetes API Server, update these flags.
 - `--audit-policy-file=<path to file containing audit policy above>`  
    For help with flags, see kube-apiserver flags. For help with audit logging, see Kubernetes audit logging documentation.
 
-Distribute the audit policy file to all master nodes, ensuring that it is available to the Kubernetes API server (e.g. by volume mounting it into the pods).
+Distribute the audit policy file to all control plane nodes, ensuring that it is available to the Kubernetes API server (e.g. by volume mounting it into the pods).
 
 Restart the Kubernetes API server. The restart command depends on how you installed Kubernetes.
 
