--- a/calico/getting-started/kubernetes/kind.mdx
+++ b/calico/getting-started/kubernetes/kind.mdx
@@ -50,7 +50,7 @@ networking:
 EOF
 ```
 
-Start your Kind cluster with one master and two worker nodes using the following command.
+Start your Kind cluster with one control plane and two worker nodes using the following command.
 
 ```bash
 kind create cluster --config kind.yaml --name dev
