--- a/calico/getting-started/kubernetes/quickstart.mdx
+++ b/calico/getting-started/kubernetes/quickstart.mdx
@@ -65,7 +65,7 @@ The geeky details of what you get:
 
 1. As a regular user with sudo privileges, open a terminal on the host that you installed kubeadm on.
 
-1. Initialize the master using the following command.
+1. Initialize the control plane using the following command.
 
    ```
    sudo kubeadm init --pod-network-cidr=192.168.0.0/16
@@ -128,7 +128,7 @@ The geeky details of what you get:
 
    :::
 
-1. Remove the taints on the master so that you can schedule pods on it.
+1. Remove the taints on the control plane so that you can schedule pods on it.
 
 
    ```bash
