--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/minikube.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/minikube.mdx
@@ -45,7 +45,7 @@ minikube start --network-plugin=cni --cni=calico
 </TabItem>
 <TabItem label="Operator" value="Operator-1">
 
-Start your minikube cluster with one master node using the following command.
+Start your minikube cluster with one control plane node using the following command.
 
 :::note
 
@@ -79,7 +79,7 @@ kubectl create -f {{manifestsUrl}}/manifests/custom-resources.yaml
 </TabItem>
 <TabItem label="Manifest" value="Manifest-2">
 
-Start your minikube cluster with one master node using the following command.
+Start your minikube cluster with one control plane node using the following command.
 
 ```bash
 minikube start --network-plugin=cni
