--- a/calico-cloud_versioned_docs/version-3.15/_includes/release-notes/_v3.16.1-release-notes.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/_includes/release-notes/_v3.16.1-release-notes.mdx
@@ -6,7 +6,7 @@
 - Resolves an issue on nodes whose Kubernetes node name does not exactly match the system hostname [cni-plugin #943](https://github.com/projectcalico/cni-plugin/pull/943) (@neiljerram)
 - Fix flannel migration issues when running on Rancher [kube-controllers #506](https://github.com/projectcalico/kube-controllers/pull/506) (@songjiang)
 - Fix `kubectl exec` format for migration controller [kube-controllers #504](https://github.com/projectcalico/kube-controllers/pull/504) (@songjiang)
-- Fix flannel migration for clusters with multiple control-plane nodes. [kube-controllers #503](https://github.com/projectcalico/kube-controllers/pull/503) (@caseydavenport)
+- Fix flannel migration for clusters with multiple control plane nodes. [kube-controllers #503](https://github.com/projectcalico/kube-controllers/pull/503) (@caseydavenport)
 - Fix datastore migration of KubeControllerConfiguration [calico #3976](https://github.com/projectcalico/calico/pull/3976) (@mgleung)
 
 ### Other changes
