--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/quickstart.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/quickstart.mdx
@@ -97,7 +97,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
    mkdir c:\k
    ```
 
-1. Copy the Kubernetes kubeconfig file from the control-plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
+1. Copy the Kubernetes kubeconfig file from the control plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
 
 1. Copy the {{prodnameWindows}} installation zip file to **c:\tigera-calico-windows.zip**.
 
@@ -188,7 +188,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
    mkdir c:\k
    ```
 
-1. Copy the Kubernetes kubeconfig file from the control-plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
+1. Copy the Kubernetes kubeconfig file from the control plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
 
 1. Copy the {{prodnameWindows}} installation zip file to **c:\tigera-calico-windows.zip**.
 
