--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/gke.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/gke.mdx
@@ -36,8 +36,8 @@ Verify the cluster has these Networking settings:
 - Intranode visability is enabled
 - Network policy is disabled
 - Dataplane V2 is disabled
-- GKE master access to TCP ports 5443, 8080 and 9090
-  The GKE master must be able to access the {{prodname}} API server which runs with pod networking on TCP ports 5443 and 8080, and the {{prodname}} Prometheus server which runs with pod networking on TCP port 9090. For multi-zone clusters and clusters with the "master IP range" configured, you will need to add a GCP firewall rule to allow access to those ports from the master nodes.
+- GKE control plane access to TCP ports 5443, 8080 and 9090
+  The GKE control plane must be able to access the {{prodname}} API server which runs with pod networking on TCP ports 5443 and 8080, and the {{prodname}} Prometheus server which runs with pod networking on TCP port 9090. For multi-zone clusters and clusters with the "master IP range" configured, you will need to add a GCP firewall rule to allow access to those ports from the control plane nodes.
 
 **Verify IAM permissions**
 
