--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/maintain.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/maintain.mdx
@@ -6,7 +6,7 @@ description: Tasks to manage Calico services and uninstall Calico Enterprise for
 
 ## Big picture
 
-Start, stop, and update {{prodnameWindows}} services on the Linux master node, and uninstall for {{prodnameWindows}}.
+Start, stop, and update {{prodnameWindows}} services on the Linux control plane node, and uninstall for {{prodnameWindows}}.
 
 ## How to
 
