--- a/calico-enterprise_versioned_docs/version-3.14/reference/component-resources/node/felix/configuration.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/reference/component-resources/node/felix/configuration.mdx
@@ -359,7 +359,7 @@ The following parameters fine tune packet capture rotation:
 | wireguardListeningPort         | Port used by WireGuard tunnels. Felix sets up WireGuard tunnel on each node specified by this port. Available for configuration only in the global FelixConfiguration resource; setting it per host, config-file or environment variable will not work. | 1-65535         | int     | 51820          |
 | wireguardMTU                   | MTU set on the WireGuard interface created by Felix. Zero value means auto-detect. See [Configuring MTU](../../../../networking/configuring/mtu.mdx).                                                                                                   | int             | int     | 0              |
 | wireguardRoutingRulePriority   | WireGuard routing rule priority value set up by Felix. If you change the default value, set it to a value most appropriate to routing rules for your nodes.                                                                                             | 1-32765         | int     | 99             |
-| wireguardHostEncryptionEnabled | **Experimental**: Adds host-namespace workload IP's to WireGuard's list of peers. Should **not** be enabled when WireGuard is enabled on a cluster's control-plane node, as networking deadlock can occur.                                              | true, false     | boolean | false          |
+| wireguardHostEncryptionEnabled | **Experimental**: Adds host-namespace workload IP's to WireGuard's list of peers. Should **not** be enabled when WireGuard is enabled on a cluster's control plane node, as networking deadlock can occur.                                              | true, false     | boolean | false          |
 | wireguardKeepAlive             | WireguardKeepAlive controls Wireguard PersistentKeepalive option. Set 0 to disable. [Default: 0]                                                                                                                                                        | int             | int     | 25             |
 
 For more information on encrypting in-cluster traffic with WireGuard, refer to
