--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/kubernetes/quickstart.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/kubernetes/quickstart.mdx
@@ -55,7 +55,7 @@ A Linux host that meets the following requirements.
 
 1. As a regular user with sudo privileges, open a terminal on the host that you installed kubeadm on.
 
-1. Initialize the master using the following command.
+1. Initialize the control plane using the following command.
 
    ```bash
    sudo kubeadm init --pod-network-cidr=192.168.0.0/16 \
@@ -77,7 +77,7 @@ A Linux host that meets the following requirements.
    sudo chown $(id -u):$(id -g) $HOME/.kube/config
    ```
 
-1. Remove master taint in order to allow kubernetes to schedule pods on the master node.
+1. Remove the taint from the control plane to allow Kubernetes to schedule pods on the control plane node.
 
    ```bash
    kubectl taint nodes --all node-role.kubernetes.io/master-
