--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/policy-firewalls/aws-integration/aws-security-group-integration.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/policy-firewalls/aws-integration/aws-security-group-integration.mdx
@@ -93,7 +93,7 @@ Gather the following information about your cluster and export it as environment
 | ------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `AWS_REGION`       | The region in which your cluster is located. The AWS CLI commands in this install assume this environment variable has been set.                                              |
 | `VPC_ID`           | The ID of the VPC in which your cluster is located.                                                                                                                           |
-| `CONTROL_PLANE_SG` | The ID of a security group to which all master nodes belong.                                                                                                                  |
+| `CONTROL_PLANE_SG` | The ID of a security group to which all control plane nodes belong.                                                                                                                  |
 | `K8S_NODE_SGS`     | Group ID(s) of the security group(s) that each node should belong to. If more than one, use commas to separate them.                                                          |
 | `CLUSTER_NAME`     | A name that uniquely identifies this cluster within the VPC. This is used as a prefix when naming per-cluster resources. It must satisfy the pattern `[a-zA-Z][-a-zA-Z0-9]*`. |
 
