--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/hardway/end-user-rbac.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/hardway/end-user-rbac.mdx
@@ -86,7 +86,7 @@ EOF
 
 To test out the network admin role, we'll create a user named Nik grant them the role.
 
-On the Kubernetes master node, create the key and certificate signing request. Note that we include `/O=network-admins` in the subject. This places Nik in the `network-admins` group.
+On the Kubernetes control plane node, create the key and certificate signing request. Note that we include `/O=network-admins` in the subject. This places Nik in the `network-admins` group.
 
 ```bash
 openssl req -newkey rsa:4096 \
@@ -200,7 +200,7 @@ EOF
 
 To test out the service owner role, we'll create a user named Sam and grant them the role.
 
-On the Kubernetes master node, create the key and certificate signing request.
+On the Kubernetes control plane node, create the key and certificate signing request.
 
 ```bash
 openssl req -newkey rsa:4096 \
