--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/k3s/multi-node-install.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/k3s/multi-node-install.mdx
@@ -40,7 +40,7 @@ For more detail please visit [this link](https://rancher.com/docs/k3s/latest/en/
 
 ## How to
 
-### Initializing master instance
+### Initializing control plane instance
 
 K3s installation script can be modified by [environment variables](https://rancher.com/docs/k3s/latest/en/installation/install-options/#options-for-installation-with-script). Here you are providing some extra arguments in order to disable `flannel`, disable k3s default network policy and change the pod ip CIDR.
 
