--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/k3s/quickstart.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/k3s/quickstart.mdx
@@ -44,7 +44,7 @@ For more detail please visit [this link](https://rancher.com/docs/k3s/latest/en/
 
 ### Create a single-node K3s cluster
 
-- Initialize the master using the following command.
+- Initialize the control plane using the following command.
 
 ```bash
 curl -sfL https://get.k3s.io | K3S_KUBECONFIG_MODE="644" INSTALL_K3S_EXEC="--flannel-backend=none --cluster-cidr=192.168.0.0/16 --disable-network-policy --disable=traefik" sh -
