--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/windows-calico/maintain.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/windows-calico/maintain.mdx
@@ -6,7 +6,7 @@ description: Tasks to manage Calico services and uninstall Calico for Windows.
 
 ## Big picture
 
-Start, stop, and update {{prodnameWindows}} services on the Linux master node, and uninstall for {{prodnameWindows}}.
+Start, stop, and update {{prodnameWindows}} services on the Linux control plane node, and uninstall for {{prodnameWindows}}.
 
 ## How to
 
