--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/hardway/install-cni-plugin.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/hardway/install-cni-plugin.mdx
@@ -15,7 +15,7 @@ To understand how the Container Network Interface (CNI) works with Kubernetes, a
 The CNI plugin interacts with the Kubernetes API server while creating pods, both to obtain additional information
 and to update the datastore with information about the pod.
 
-On the Kubernetes master node, create a key for the CNI plugin to authenticate with and certificate signing request.
+On the Kubernetes control plane node, create a key for the CNI plugin to authenticate with and certificate signing request.
 
 ```bash
 openssl req -newkey rsa:4096 \
