--- a/calico_versioned_docs/version-3.25/operations/monitor/monitor-component-metrics.mdx
+++ b/calico_versioned_docs/version-3.25/operations/monitor/monitor-component-metrics.mdx
@@ -29,7 +29,7 @@ The Prometheus monitoring tool scrapes metrics from instrumented jobs and displa
 
 ### About {{prodname}} Felix, Typha, and kube-controllers components
 
-**Felix** is a daemon that runs on every machine that implements network policy. Felix is the brains of {{prodname}}. Typha is an optional set of pods that extends Felix to scale traffic between {{prodname}} nodes and the datastore. The kube-controllers pod runs a set of controllers which are responsible for a variety of control-plane functions, such as resource garbage collection and synchronization with the Kubernetes API.
+**Felix** is a daemon that runs on every machine that implements network policy. Felix is the brains of {{prodname}}. Typha is an optional set of pods that extends Felix to scale traffic between {{prodname}} nodes and the datastore. The kube-controllers pod runs a set of controllers which are responsible for a variety of control plane functions, such as resource garbage collection and synchronization with the Kubernetes API.
 
 You can configure Felix, Typha, and/or kube-controllers to provide metrics to Prometheus.
 
