Add note about root privileges

--- a/calico-cloud_versioned_docs/version-3.16/image-assurance/scan-image-registries.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/image-assurance/scan-image-registries.mdx
@@ -224,6 +224,12 @@ In the Scan Results and Runtime tabs, the **Registry path** field may be blank i
 
 :::note
 
+When enabled, the Runtime View deploys a Daemonset into all connect Managed Clusters that require root privileges and host networking.
+
+:::
+
+:::note
+
 If your Managed Clusters are running in RKE or RKE2, running a Kubernetes versions older than 1.23, or are intentionally using a CRI
 implementation different from Containerd, you'll need to ensure that our system knows where the CRI socket on your Managed Cluster
 nodes are. For more information, see [Change the Runtime View CRI socket path](change-the-cri-socket-path.mdx)
