fix release note headings

--- a/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/_includes/release-notes/_v3.16.0-release-notes.mdx
@@ -1,6 +1,6 @@
 15 February 2023
 
-### What's new {#whats-new-3.16.0}
+### What's new
 
 #### Egress gateways for AKS and Azure
 
@@ -54,7 +54,7 @@ This includes the following:
 * Root context and privilege escalation are used only when necessary
 * `SeccompProfile` is set to `RuntimeDefault`
 
-## Known issues
+### Known issues
 
 * L7 log collection fails to deploy on CIS hardened clusters. As a result, some cards in the manager UI dashboard will not display any metrics.
 * Upgrading to {{prodname}} 3.16.0 on Rancher/RKE from {{prodname}} 3.13.0 currently requires manually terminating the calico-node container for upgrade to proceed.
