--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/hosts/kubernetes-nodes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/hosts/kubernetes-nodes.mdx
@@ -100,7 +100,7 @@ metadata:
   name: all-nodes-policy
 spec:
   selector: has(kubernetes-host)
-  <rest of the policy>
+  #<rest of the policy>
 ```
 
 To select a specific set of host endpoints (and their corresponding Kubernetes nodes), use a policy selector that selects a label unique to that set of host endpoints.
@@ -121,7 +121,7 @@ metadata:
   name: some-nodes-policy
 spec:
   selector: has(kubernetes-host) && environment == 'dev'
-  <rest of the policy>
+  #<rest of the policy>
 ```
 
 ## Tutorial
