--- a/calico_versioned_docs/version-3.24/network-policy/hosts/kubernetes-nodes.mdx
+++ b/calico_versioned_docs/version-3.24/network-policy/hosts/kubernetes-nodes.mdx
@@ -94,7 +94,7 @@ metadata:
   name: all-nodes-policy
 spec:
   selector: has(kubernetes-host)
-  <rest of the policy>
+  #<rest of the policy>
 ```
 
 To select a specific set of host endpoints (and their corresponding Kubernetes nodes), use a policy selector that selects a label unique to that set of host endpoints.
@@ -115,7 +115,7 @@ metadata:
   name: some-nodes-policy
 spec:
   selector: has(kubernetes-host) && environment == 'dev'
-  <rest of the policy>
+  #<rest of the policy>
 ```
 
 ## Tutorial
