--- a/calico-cloud/network-policy/beginners/calico-network-policy.mdx
+++ b/calico-cloud/network-policy/beginners/calico-network-policy.mdx
@@ -225,7 +225,7 @@ metadata:
   name: drop-other-ingress
 spec:
   order: 20
-  ...deny policy rules here...:
+  #...deny policy rules here...
 ```
 
 ```yaml
@@ -235,7 +235,7 @@ metadata:
   name: allow-cluster-internal-ingress
 spec:
   order: 10
-  ...allow policy rules here...:
+  #...allow policy rules here...
 ```
 
 ### Generate logs for specific traffic
