Update grammar issues

--- a/calico-cloud/image-assurance/change-the-cri-socket-path.mdx
+++ b/calico-cloud/image-assurance/change-the-cri-socket-path.mdx
@@ -6,7 +6,7 @@ description: Change the Runtime View CRI socket path from the default value.
 
 ## Big picture
 
-Change the CRI socket path in connected Managed Clusters from the path
+Change the CRI socket path in connected Managed Clusters from the default path.
 
 ## Value
 
@@ -33,9 +33,9 @@ is located some other than the default location:
 
 **Configuring the CRI socket path for Managed Cluster**
 
-To update the CRI socket path for you Managed Cluster use the following command:
+To update the CRI socket path for your Managed Cluster use the following command:
 ```bash
-kubectl patch imageassurance default --type='merge' -p '{"spec":{"criSocketPath":"<path-to-cri-socket"}}'
+kubectl patch imageassurance default --type='merge' -p '{"spec":{"criSocketPath":"<path-to-cri-socket>"}}'
 ```
 
 See [the installation reference](../reference/installation/api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) for more details on the ImageAssurance CR.
