--- a/calico-cloud_versioned_docs/version-3.16/image-assurance/change-the-cri-socket-path.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/image-assurance/change-the-cri-socket-path.mdx
@@ -28,7 +28,7 @@ Below is a list of systems that are known to use CRI implementations other than 
 is located some other than the default location:
 1. Rancher uses cri-dockerd, so the CRI socket path should be located at `/var/run/cri-dockerd.sock`.
 2. EKS installations with kubernetes version lower than 1.23 use docker shim, located at `/var/run/dockershim.sock`
-3. RKE2 installation use Containerd but it's located at `/run/k3s/containerd/containerd.sock`
+3. RKE2 installations use Containerd but it's located at `/run/k3s/containerd/containerd.sock`
 4. Installations of Kubernetes versions lower than 1.23 might be using `dockershim` by default, located at `/var/run/dockershim.sock`
 
 **Configuring the CRI socket path for Managed Cluster**
