Fix Barbara's comments

--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -25,10 +25,11 @@ You can also
 :::
 
 Verify that the application pods have been created and are ready.
-
+```bash
     kubectl get pods
+```
 
-When the demo application has come up, you will see three pods.
+When the demo application is displayed, you will see three pods.
 
 ```
 NAME                        READY     STATUS    RESTARTS   AGE
