Address Seth's comments

--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -16,7 +16,18 @@ summaries, and an [etcd](https://github.com/coreos/etcd) datastore.
 ```bash
 kubectl apply -f {{tutorialFilesURL}}/10-yaobank.yaml
 ```
-
+```
+namespace/yaobank configured
+service/database created
+serviceaccount/database created
+deployment.apps/database created
+service/summary created
+serviceaccount/summary created
+deployment.apps/summary created
+service/customer created
+serviceaccount/customer created
+deployment.apps/customer created
+```
 :::note
 
 You can also
@@ -26,7 +37,7 @@ You can also
 
 Verify that the application pods have been created and are ready.
 ```bash
-    kubectl get pods
+    kubectl rollout status deploy/summary deploy/customer deploy/database
 ```
 
 When the demo application is displayed, you will see three pods.
