--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/application-layer-policies/alp-tutorial.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/application-layer-policies/alp-tutorial.mdx
@@ -16,7 +16,7 @@ summaries, and an [etcd](https://github.com/coreos/etcd) datastore.
 ```bash
 kubectl apply -f {{tutorialFilesURL}}/10-yaobank.yaml
 ```
-```
+```bash
 namespace/yaobank configured
 service/database created
 serviceaccount/database created
