Integrate alp and waf changes in Cloud docs

--- a/calico-cloud_versioned_docs/version-3.16/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/release-notes/index.mdx
@@ -18,6 +18,11 @@ The **Managed Clusters** page has been redesigned to make it easier and more int
 
 {{prodname}} includes a new UI to enable and configure a workload-based Web Application Firewall. For more information, see [Workload-based web application firewall](../threat/web-application-firewall.mdx#enable-waf).
 
+### Application layer policy with Envoy
+
+{{prodname}} now includes support for application layer policy with Envoy, enabling platform operators to define authorization rules in {{prodname}} policies for protocols such as HTTP and gRPC. For more information, see [Application layer policies](../network-policy/application-layer-policies/).
+
+
 ### Service Graph performance optimizations
 
 {{prodname}} added several optimizations to improve the performance of Service Graph for clusters with larger numbers of namespaces.
