[EV-3557] Update policy-recommendations link

--- a/calico-enterprise/reference/resources/policyrecommendations.mdx
+++ b/calico-enterprise/reference/resources/policyrecommendations.mdx
@@ -18,7 +18,7 @@ import Icmp from '@site/calico-enterprise_versioned_docs/version-3.16/_includes/
 
 import Rule from '@site/calico-enterprise_versioned_docs/version-3.16/_includes/content/_rule.mdx';
 
-Policy recommendation scope represents a collection of configuration options used to control the [policy recommendation](/network-policy/recommendations/policy-recommendations/policy-recommendations.mdx) engine.
+Policy recommendation scope represents a collection of configuration options used to control the [policy recommendation](../../network-policy/recommendations/policy-recommendations.mdx) engine.
 
 To apply changes to this resource, use the following format:
 
