--- a/calico-cloud/get-started/connect/operator-checklist.mdx
+++ b/calico-cloud/get-started/connect/operator-checklist.mdx
@@ -145,7 +145,7 @@ Check that the Tigera operator is running and that logs do not have any fatal er
 kubectl get pods -n tigera-operator
 ```
 
-```
+```bash
 NAME                               READY   STATUS    RESTARTS   AGE
 tigera-operator-8687585b66-68gmr   1/1     Running   0          139m
 ```
