Adds docs for CRI socket path change

--- a/calico-cloud/image-assurance/scan-image-registries.mdx
+++ b/calico-cloud/image-assurance/scan-image-registries.mdx
@@ -246,7 +246,26 @@ To change the CVSS threshold values, note the following:
 
 **Enable Runtime View**
 
-When Runtime View is enabled in Scan Settings, {{prodname}} actively monitors pods running in your Kubernetes clusters so it can correlate them with images you have recorded in the Image Assurance system. By default, this feature is disabled. If you disable the feature after it has been enabled, runtime information that is already collected for existing images will remain in the system.
+You can configure your scan settings to directly monitor pods that are running in your Kubernetes clusters.
+When enabled, Runtime View checks image information from the active container images in all of your connected clusters.
+These images are correlated with the images you have recorded in the Image Assurance system.
+
+To enable Runtime View, select the **Enable Runtime View** checkbox in the **Scan Results** tab.
+You can clear the checkbox to disable Runtime View.
+After disabling Runtime View, some runtime information for existing images will remain in the system.
+
+:::note
+
+If your cluster does not use the default containerd socket path (`/run/containerd/containerd.sock`), then you must change the path to allow the Runtime View service to collect image information.
+
+To update the CRI socket path for a cluster, run the following command:
+
+```bash
+kubectl patch imageassurance default --type='merge' -p '{"spec":{"criSocketPath":"<path-to-cri-socket>"}}'
+```
+See [the installation reference](../reference/installation/api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) for more details on the ImageAssurance CR.
+
+:::
 
 ### Create vulnerability exceptions
 
